--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,8 @@
 ---
-title: Contact | John Paul Brammer
-permalink: "/contact/"
 layout: cv
+title: Contact | John Paul Brammer
+permalink: /contact/
 ---
-
 <div class="contact-title">Let's Talk</div>
 <div class="contact-page-form">
     <form action="https://formspree.io/your@email.com" method="POST">
