--- a/index.html
+++ b/index.html
@@ -58,5 +58,5 @@ layout: default
             <a class="twitter-timeline" href="https://twitter.com/jpbrammer" width="100%" height="100%" data-chrome="nofooter noborders noscrollbars transparent" data-tweet-limit="4" data-link-color="#00BFA5">Tweets by jpbrammer</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
-        <a href="/work" class="home-all-link"><h4>View All Work <span>&#x2197;</span></h4></a>
+        <a href="/work" class="home-all-link"><h4>View All Work <span>&#8599;</span></h4></a>
 </div>
